[WIDGET] Showing widget on generator page

--- a/public/stylesheets/widget.css
+++ b/public/stylesheets/widget.css
@@ -22,7 +22,8 @@ a {
 }
 
 .vox-widget-wrapper{
-  position: absolute;
+  z-index: 10000;
+  position: fixed;
   bottom: 0;
   right: 0;
   box-sizing: border-box;
