--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -34,40 +34,7 @@ html(lang='en', ng-app="voxboneApp")
 
         window.addEventListener('message', function(event) {
           console.log(event.data);
-
-          switch(event.data) {
-            case 'hang_up':
-              voxbone.WebRTC.hangup();
-              break;
-            case 'volume-mute':
-              if (voxbone.WebRTC.isMuted) {
-                voxbone.WebRTC.unmute();
-              } else {
-                voxbone.WebRTC.mute();
-              }
-              break;
-            case 'microphone-mute':
-              if (voxbone.WebRTC.isMuted) {
-                voxbone.WebRTC.unmute();
-              } else {
-                voxbone.WebRTC.mute();
-              }
-              break;
-            case '1':
-            case '2':
-            case '3':
-            case '4':
-            case '5':
-            case '6':
-            case '7':
-            case '8':
-            case '9':
-            case '0':
-            case '*':
-            case '#':
-              voxbone.WebRTC.sendDTMF(event.data);
-              break;
-          }
+          send_voxbone_interaction(event.data);
         });
       });
 
@@ -112,5 +79,4 @@ html(lang='en', ng-app="voxboneApp")
         .widget-box.style-b
           button.btn-style.mdi-communication-call#launch_call #[span {{widget.button_label || 'Call Sales'}}]
           .widget-footer
-            a(href="#") powered by:
-
+            a(href="https://voxbone.com" target="_blank") powered by:
