--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -19,13 +19,14 @@ html(lang='en', ng-app="voxboneApp")
 
     script.
 
+      var number = '13072787231'; //16092975366
+
       $(document).ready(function () {
         $("#launch_call").click(function(e) {
           e.preventDefault();
 
           parent.postMessage("openWidget","*");
 
-          var number = '13072787231'; //16092975366
           voxbone.WebRTC.call(number);
           window.onbeforeunload = function(e){
             voxbone.WebRTC.rtcSession.terminate();
@@ -38,6 +39,24 @@ html(lang='en', ng-app="voxboneApp")
         });
       });
 
+      var eventHandlers = {
+        'localMediaVolume': function (e) {
+          console.log('localMediaVolume ' + e.localVolume);
+        },
+        'progress': function (e) {
+          console.log('Calling ' + number);
+        },
+        'failed': function (e){
+          console.log('Failed to connect: ' + e.data.cause);
+        },
+        'accepted': function (e){
+          console.log('Call started');
+        },
+        'ended': function (e){
+          console.log('Call ended');
+        }
+      };
+
       var app = angular.module('voxboneApp', [])
         .controller('VoxboneWidgetController', ['$scope', '$http', '$window', function($scope, $http, $window){
 
@@ -46,11 +65,13 @@ html(lang='en', ng-app="voxboneApp")
           $scope.init = function () {
             voxbone.WebRTC.authServerURL = "https://webrtc.voxbone.com/rest/authentication/createToken";
 
-            //- voxbone.WebRTC.customEventHandler = eventHandlers;
-            //- voxbone.WebRTC.configuration.uri = #{sipUri};
-            //- voxbone.WebRTC.configuration.display_name = #{callerId};
-            //- voxbone.WebRTC.context = #{context};
-            //- voxbone.WebRTC.sendDTMF(#{digits});
+            voxbone.WebRTC.customEventHandler = eventHandlers;
+            voxbone.WebRTC.configuration.uri = '#{the_widget.sip_uri}';
+            voxbone.WebRTC.configuration.display_name = '#{the_widget.caller_id}';
+            voxbone.WebRTC.context = '#{the_widget.context}';
+
+            //TODO: Check, not working!
+            //- voxbone.WebRTC.sendPreConfiguredDtmf('#{the_widget.send_digits}');
 
             voxbone.WebRTC.init(#{voxrtc_config});
           };
@@ -58,25 +79,12 @@ html(lang='en', ng-app="voxboneApp")
           $scope.init();
         }]);
 
-        var eventHandlers = {
-            'progress':   function(e){
-            $("#status_message").innerHTML="<p>Calling " + $('#number').value+"</p>";
-            },
-            'failed':     function(e){
-            $("#status_message").innerHTML="<p>Failed to connect: "+ e.data.cause +"</p>";
-            },
-            'started':    function(e){
-            $("#status_message").innerHTML="<p>Call started</p>";
-            },
-            'ended':      function(e){
-            $("#status_message").innerHTML="<p>Call ended</p>";
-          }
-        }
+
 
   body(onload='detectBrowser()')
     .main
       .body(ng-controller="VoxboneWidgetController")
         .widget-box.style-b
-          button.btn-style.mdi-communication-call#launch_call #[span {{widget.button_label || 'Call Sales'}}]
+          button.btn-style.mdi-communication-call#launch_call #[span #{ the_widget.button_label }]
           .widget-footer
             a(href="https://voxbone.com" target="_blank") powered by:
