[WIDGET] adding Incompatible Browser Configuration

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html(lang='en', ng-app="voxboneApp")
 
     script(src="/javascripts/webrtc_voxbone_tools.js",type="application/javascript")
 
-  body(onload='detectBrowser()')
+  body
     .container
       nav.navbar
         .navbar-header
