--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -107,7 +107,7 @@ html(lang='en', ng-app="voxboneApp")
   body
     .main
       .body(ng-controller="VoxboneWidgetController")
-        .widget-box
-          button.mdi-communication-call#launch_call(ng-click="makeCall()" class="#{ the_widget.button_style || 'btn-style-b' }") #[span #{ the_widget.button_label || 'Call Now!' }]
+        .widget-box(class="#{ the_widget.button_style || 'style-b' }")
+          button.btn-style.mdi-communication-call#launch_call(ng-click="makeCall()") #[span #{ the_widget.button_label || 'Call Now!' }]
           .widget-footer
             a(href="https://voxbone.com" target="_blank") powered by:
