--- a/views/widget.jade
+++ b/views/widget.jade
@@ -150,7 +150,7 @@ block content
 
           $http(req)
             .then(function successCallback(response){
-              console.log(response.data);
+              //- console.log(response.data);
               $scope.widget.widget_code = response.data.widget_code;
 
             }, function errorCallback(){
