--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -595,13 +595,24 @@ strong {
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
-.widget-box .widget-footer {
+.widget-box .widget-footer-left {
+  position: absolute;
+  font-size: 9px;
+  bottom: 8px;
+  left: 8px;
+}
+.widget-box .widget-footer-right {
   position: absolute;
   font-size: 9px;
   bottom: 8px;
   right: 8px;
 }
-.widget-box .widget-footer a {
+.widget-box .widget-footer-left a {
+  background-size: 60px 12.5px;
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+.widget-box .widget-footer-right a {
   padding-right: 62px;
   background-image: url('../../images/widget-brand.png');
   background-size: 60px 12.5px;
@@ -727,16 +738,16 @@ strong {
 }
 /* Responsive Style */
 /* =================================================================================
-smaller than 1280 
+smaller than 1280
 ================================================================================= */
 /* =================================================================================
-smaller than 1024 
+smaller than 1024
 ================================================================================= */
 /* =================================================================================
-smaller than 760 
+smaller than 760
 ================================================================================= */
 /* =================================================================================
-smaller than 620 
+smaller than 620
 ================================================================================= */
 @media screen and (max-width: 620px) {
   .navbar.navbar span.subBrand {
@@ -754,7 +765,7 @@ smaller than 620
   }
 }
 /* =================================================================================
-smaller than 428 
+smaller than 428
 ================================================================================= */
 @media screen and (max-width: 428px) {
   .registerPage .formWrap {
