--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -21,18 +21,6 @@ html(lang='en', ng-app="voxboneApp")
 
       var number = '13072787231'; //16092975366
 
-      //- $(document).ready(function () {
-      //-   window.addEventListener('message', function(event) {
-      //-     //- console.log(event.data);
-      //-     var message = event.data;
-
-      //-     if (message.action &&  message.action == 'rate')
-      //-       alert('rate !')
-      //-     else
-      //-       send_voxbone_interaction(event.data);
-      //-   });
-      //- });
-
       var eventHandlers = {
         'localMediaVolume': function (e) {
           //- console.log('Microphone Volume -> ' + e.localVolume);
@@ -106,7 +94,8 @@ html(lang='en', ng-app="voxboneApp")
               },
               data: {
                 rate: rate,
-                comment: comment
+                comment: comment,
+                token: '#{the_widget._id}'
               }
             };
 
@@ -148,6 +137,15 @@ html(lang='en', ng-app="voxboneApp")
 
           $scope.init();
         }]);
+
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '#{process.env.GOOGLE_ANALYTICS_ID}', 'auto');
+      ga('send', 'pageview');
 
   body
     .main
